# dtsc330_26

./: .gitignore  README.md  SYLLABUS.md  pyproject.toml
dtsc330_26/: entity_resolution_features.py  reusable_classifier.py
dtsc330_26/bus_hackathon/: bus_routes.py
dtsc330_26/nn_library/: batch.py  optimizer.py  train.py
dtsc330_26/readers/: articles.py  grants.py
dtsc330_26/sql/: create_tables.sql
dtsc330_26/tf_layers/: example.py  seq2seq_transformer.py  token_position_embedding.py  tokenization.py  transformer_decoder_block.py  transformer_encoder_block.py
scripts/: har_classifier.py  har_cnn.py  in_class_extract_study_guide.py  in_class_sir_model.py  nlp_examples.py  semantle_example.py  wine_quality_classification.py
